# Smart-Trading

./: .env.example  .gitignore  Dockerfile  PROJECT_DOCUMENTATION.docx  PROJECT_DOCUMENTATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_backend.bat  twelve_data_validation.py
backtesting/: backtest_report.md  monthly_returns.csv  performance_metrics.json  performance_summary.csv  risk_report.md  trade_log.csv  trade_statistics.csv  yearly_returns.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: feature_config.yaml  model_config.yaml  paths.py  settings.py  trading_config.yaml
data/: ingestion_manifest.json
decision_fusion/: __init__.py  engine.py
docs/: application_backend.md  decision_fusion.md  intelligence_layer.md  market_intelligence_ai.md
economic_intelligence/: __init__.py  engine.py
forex_factory_connector/: __init__.py  connector.py
frontend/: package-lock.json  package.json  tailwind.config.js
market_intel/: __init__.py
market_intelligence_ai/: __init__.py  engine.py
reports/: data_quality_report.md  feature_pipeline_report.md  pipeline_summary.md
scripts/: backtest.py  backtest_multimodel.py  build_features.py  build_labels.py  deploy.py  download_data.py  download_historical_data.py  manifest_monitor.py  preprocess_data.py  run_feature_pipeline.py  run_full_ingest.py  run_full_pipeline.py  train.py  train_lookahead.py
src/: __init__.py
tests/: test_api.py  test_backtester.py  test_features.py  test_models.py
validation_results/: generalization_report.md  (+6 more)
(+600 files in other folders)
